--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "dependencies": {
         "@shopify/jest-koa-mocks": "^3.0.1",
         "@types/supertest": "^2.0.11",
+        "@types/winston": "^2.4.4",
         "koa": "^2.13.1",
         "koa-bodyparser": "^4.3.0",
-        "koa-router": "^10.0.0"
+        "koa-router": "^10.0.0",
+        "winston": "^3.3.3"
     },
     "devDependencies": {
         "@types/jest": "^26.0.23",
