--- a/package.json
+++ b/package.json
@@ -1,58 +1,59 @@
 {
-    "name": "koa-task1",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "jest",
-        "build": "tsc",
-        "start": "ts-node-dev --respawn server.ts"
+  "name": "koa-task1",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest",
+    "build": "tsc",
+    "start": "ts-node-dev --respawn server.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^10.0.0",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/koa": "^2.13.3",
+    "@types/koa-bodyparser": "^4.3.1",
+    "@types/koa-router": "^7.4.2",
+    "@types/node": "^15.12.2",
+    "@types/supertest": "^2.0.11",
+    "@types/winston": "^2.4.4",
+    "@shopify/jest-koa-mocks": "^3.0.1",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.6",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.3.2",
+    "mockdate": "^3.0.5"
+  },
+  "jest": {
+    "verbose": true,
+    "collectCoverage": true,
+    "modulePathIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
     },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@shopify/jest-koa-mocks": "^3.0.1",
-        "@types/supertest": "^2.0.11",
-        "@types/winston": "^2.4.4",
-        "koa": "^2.13.1",
-        "koa-bodyparser": "^4.3.0",
-        "koa-router": "^10.0.0",
-        "winston": "^3.3.3"
-    },
-    "devDependencies": {
-        "@types/jest": "^26.0.23",
-        "@types/koa": "^2.13.3",
-        "@types/koa-bodyparser": "^4.3.1",
-        "@types/koa-router": "^7.4.2",
-        "@types/node": "^15.12.2",
-        "jest": "^26.6.3",
-        "supertest": "^6.1.3",
-        "ts-jest": "^26.5.6",
-        "ts-node-dev": "^1.1.6",
-        "typescript": "^4.3.2"
-    },
-    "jest": {
-        "verbose": true,
-        "collectCoverage": true,
-        "modulePathIgnorePatterns": [
-            "<rootDir>/node_modules/"
-        ],
-        "transform": {
-            "^.+\\.tsx?$": "ts-jest"
-        },
-        "testEnvironment": "node",
-        "testPathIgnorePatterns": [
-            "/node_modules/"
-        ],
-        "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js",
-            "jsx",
-            "json",
-            "node"
-        ]
-    }
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  }
 }
